--- a/packages/layout/src/panel/panel-body/PanelBody.module.css
+++ b/packages/layout/src/panel/panel-body/PanelBody.module.css
@@ -2,5 +2,4 @@
   background-color: var(--midas-background-base);
   box-sizing: border-box;
   padding: 1rem;
-  transition: width var(--midas-transition-duration-fast) ease-out;
 }
